--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <nav>
         <a href="/">home</a>
         <a href="/about.html">about</a>
-        <a href="/category/php/">categories</a>
+        <a href="/category/story/">categories</a>
     </nav>
 </header>
 
