--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,22 +23,13 @@
                 <span><a href="/">home</a></span>
                 <span><a href="/about.html">about</a></span>
                 <span><a href="/category/story/">categories</a></span>
+        		<span><a href="http://fofore.com/atom.xml"><img src="/images/rss.png" alt="Subscribe to the RSS feed" /></a></span>
             </nav>
             <article class="content">
             {{content}}
             </article>
         </div>
     </div>
-
-<footer>
-    <div class="contact">
-    </div>
-    <div class="contact">
-    </div>
-    <div class="rss">
-        <a href="http://fofore.com/atom.xml"><img src="/images/rss.png" alt="Subscribe to the RSS feed" /></a>
-    </div>
-</footer>
 
 </body>
 </html>
