change the name before the date

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 
 <section class="meta">
 <span class="author">
-  <a href="http://fofore.com">{{ site.author }}</a>
+  <a href="http://fofore.com">FOFORE</a>
 </span>
 <span class="time">
   /
