--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>{{ page.title }}</title>
+    <title>{{ page.title }} | {{ site.author }}</title>
     <meta name="author" content="fofore" />
-
     <link href="http://feeds.feedburner.com/fofore/all" rel="alternate" title="fofore" type="application/atom+xml" />
-
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/highlight.css">
-
-
 </head>
+
 <body>
-    
     <div id="container">
         <div id="main" role="main">
             <header>
-                <h1><a href="/">FOFORE</a></h1>
+                <h1>{{ page.title }}</a></h1>
             </header>
             <nav>
                 <span><a href="/">home</a></span>
@@ -30,6 +27,5 @@
             </article>
         </div>
     </div>
-
 </body>
 </html>
