--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,10 @@
                 <h1>{{ page.title }}</a></h1>
             </header>
             <nav>
-                <span><a href="/">home</a></span>
-                <span><a href="/about.html">about</a></span>
-                <span><a href="/category/story/">categories</a></span>
+                <span><a title="home" 		class="" href="/">home</a></span>
+                <span><a title="about" 		class="" href="/about.html">about</a></span>
+                <span><a title="categories" class="" href="/category/story/">categories</a></span>
+        		<span><a title="tags" 	  	class="" href="{{ site.url }}/tags/">tags</a></span>
         		<span><a href="http://fofore.com/atom.xml"><img src="/images/rss.png" alt="Subscribe to the RSS feed" /></a></span>
             </nav>
             <article class="content">
