--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
             <nav>
                 <span><a title="home" 		class="" href="/">home</a></span>
                 <span><a title="about" 		class="" href="/about.html">about</a></span>
-                <span><a title="categories" class="" href="/category/story/">categories</a></span>
+        		<span><a title="categories" class="" href="{{ site.url }}/categories/">categories</a></span>
         		<span><a title="tags" 	  	class="" href="{{ site.url }}/tags/">tags</a></span>
         		<span><a href="http://fofore.com/atom.xml"><img src="/images/rss.png" alt="Subscribe to the RSS feed" /></a></span>
             </nav>
