--- a/css/style.css
+++ b/css/style.css
@@ -49,14 +49,13 @@ pre,code{font-family:Menlo,"Andale Mono",Consolas,"Courier New",Monaco,monospace
 code{background-color:#F7F7F7;}
 embed,object,iframe{display:block;margin:4px auto;}
 .gist{font-size: 12px;line-height:1.6;}
-footer{text-align: right;}
+footer{text-align: center;}
 .label-info {
 	background-color: rgb(58, 135, 173);
     font-size: 11.25px;
 	font-weight: 700;
 	color: rgb(255, 255, 255);
 	text-transform: uppercase;
-	background-color: rgb(153, 153, 153);
 	border-radius: 3px 3px 3px 3px;
 	padding: 1px 3px 2px;
 }
