the jquery path solve the jquery eror

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <link href="http://feeds.feedburner.com/fofore/all" rel="alternate" title="fofore" type="application/atom+xml" />
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/highlight.css">
+    <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
 </head>
 
 <body>
