--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
                 <span><a title="about" 		class="" href="/about.html">about</a></span>
                 <span><a title="categories" class="" href="{{ site.url }}/categories/">categories</a></span>
                 <span><a title="tags" 	  	class="" href="{{ site.url }}/tags/">tags</a></span>
+                <span><a title="vita" 	  	class="" href="{{ site.url }}/vita/">vita</a></span>
                 <span><a href="http://fofore.com/atom.xml"><img src="/images/rss.png" alt="Subscribe to the RSS feed" /></a></span>
             </nav>
             <article class="content">
