--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,17 +41,21 @@ layout: default
 
 <section id="comments">
     <div id="disqus_thread"></div>
+    <button class="btn-primary btn-small" id="show_disqus">Show Comments</button>
     <script type="text/javascript">
-        var disqus_shortname = 'fofore';
-        var disqus_title = '{{ page.title }}';
-        var disqus_url = 'http://fofore.com{{ page.url }}';
-        var disqus_identifier = '{{ page.id }}';
-
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
+          $(function() {
+            $('#show_disqus').click(function() {
+              var s = '<div id="disqus_thread"></div><script type="text/javascript">';
+              s += '{% if site.safe == false %}var disqus_developer = 1;{% endif %}';
+              s += "var disqus_shortname = 'fofore';";
+              s += "var disqus_title = '{{ page.title }}';";
+              s += "var disqus_url = 'http://fofore.com{{ page.url }}';";
+              s += "var disqus_identifier = '{{ page.id }}';";
+              s += "(function() {var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);})();";
+              s += '</' + 'script>';
+              $('#show_disqus').after('<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>').after('<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>').after(s).hide();
+            });
+          });
     </script>
 </section>
 
