--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@ layout: default
 
 <section id="comments">
     <div id="disqus_thread"></div>
-    <button class="middle button rosy bigrounded" id="show_disqus" type="button">Show Comments</button>
+    <button class="middle button red bigrounded" id="show_disqus" type="button">Show Comments</button>
     <script type="text/javascript">
           $(function() {
             $('#show_disqus').click(function() {
