--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ p{padding:.5em 0;}
 li{padding:.2em 0;}
 ol,ul{list-style-position:inside;}
 ol ul, ul ol, ul ul, ol ol {margin-left:1em;}
-pre code{margin:1em 0;font-size:13px;line-height:1.6;display:block;overflow:auto;}
 blockquote{display:block;text-align:justify;border-left:4px solid #eeeeee;}
 blockquote{margin:1em 0em;padding-left:1.5em;}
 blockquote p{margin:0;padding:.5em 0;}
@@ -45,8 +44,22 @@ h1{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-siz
 h2{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.4em;color:#111;}
 h3{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.2em;color:#222;}
 h4{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1em;color:#333;}
-pre,code{font-family:Menlo,"Andale Mono",Consolas,"Courier New",Monaco,monospace;font-size:13px;}
-code{background-color:#F7F7F7;}
+pre code{
+font-family:Menlo,"Andale Mono",Consolas,"Courier New",Monaco,monospace;font-size:13px;
+background: #002b36;
+-webkit-border-radius: 0.4em;
+-moz-border-radius: 0.4em;
+-ms-border-radius: 0.4em;
+-o-border-radius: 0.4em;
+border-radius: 0.4em;
+border: 1px solid #05232b;
+line-height: 1.45em;
+font-size: 13px;
+margin-bottom: 2.1em;
+padding: .8em 1em;
+color: #93a1a1;
+overflow: auto;
+}
 embed,object,iframe{display:block;margin:4px auto;}
 .gist{font-size: 12px;line-height:1.6;}
 .label-info {font-size: 11.25px;font-weight: 700;color: rgb(255, 255, 254);text-transform: uppercase;border-radius: 3px 3px 3px 3px;
