--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
                 <h1>{{ page.title }}</a></h1>
             </header>
             <nav>
-                <span><a title="home" 		class="" href="/">home</a></span>
+                <span><a title="home" 		class="" href="/home/">home</a></span>
                 <span><a title="about" 		class="" href="/about.html">about</a></span>
                 <span><a title="categories" class="" href="{{ site.url }}/categories/">categories</a></span>
                 <span><a title="tags" 	  	class="" href="{{ site.url }}/tags/">tags</a></span>
