--- a/css/style.css
+++ b/css/style.css
@@ -12,135 +12,286 @@
 @import url(http://fonts.googleapis.com/css?family=Galdeano);
 @import url(http://fonts.googleapis.com/css?family=Electrolize);
 @import url(http://fonts.googleapis.com/css?family=Cuprum);
-body{font-size:14px;font-family:"Galdeano","Hiragino Sans GB","Microsoft YaHei",Trebuchet,"Trebuchet MS",Tahoma,"Lucida Grande","Lucida Sans Unicode",Verdana,sans-serif;color:#000000;background-image:url("/css/bg.png");}
-*{padding:0;margin: 0;border:none;outline:none;}
-a{color:#dd0000;text-decoration:none;}
-a:hover{color:#333333;text-decoration:underline;}
-hr{margin:.7em 0;border-top:1px dashed #d0d0d0;border-bottom:1px dashed #f9f9f9;}
-p{padding:.5em 0;}
-li{padding:.2em 0;}
-ol,ul{list-style-position:inside;}
-ol ul, ul ol, ul ul, ol ol {margin-left:1em;}
-blockquote{display:block;text-align:justify;border-left:4px solid #eeeeee;}
-blockquote{margin:1em 0em;padding-left:1.5em;}
-blockquote p{margin:0;padding:.5em 0;}
-#container{width:600px;margin:2em auto;display:block;padding:0 2em;}
-.content{font-size:16px;line-height:24px;}
-.content h1{padding:.5em 0;}
-.content img{max-width:600px;display:block;margin:4px auto;-webkit-box-shadow:#999 1px 1px 4px;-moz-box-shadow:#999 1px 1px 4px;box-shadow:#999 1px 1px 4px;}
-#tag_cloud{margin-bottom: 1em;}
-#tag_cloud a:hover{color:#333333 !important;text-decoration:none;}
-.listing-item,.listing-seperator{list-style-type:none;}
-.listing-item a{padding:.2em 1em;}
-.listing-item time{color:#999999;}
-.listing-seperator{font-weight:bold;}
-.meta{text-align:right;font-size:12px;}
-header{padding:.5em 0;border-bottom: 1px solid #cccccc;}
-nav{position:absolute;font-family:"Electrolize",sans-serif;font-size:1.1em;text-transform:uppercase;float:left;margin-left:-12em;width:9em;text-align:right;}
-nav a{display:block;padding:.7em 1em;color:#000000;}
-nav a:hover{background-color:#ff0000;text-decoration:none;color:#f9f9f9;-webkit-transition:color .2s linear;}
-.post{padding:.5em 0em;}
-h1{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.6em;color:#000;}
-h2{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.4em;color:#111;}
-h3{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.2em;color:#222;}
-h4{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1em;color:#333;}
-pre code{
-font-family:Menlo,"Andale Mono",Consolas,"Courier New",Monaco,monospace;font-size:13px;
-background: #002b36;
--webkit-border-radius: 0.4em;
--moz-border-radius: 0.4em;
--ms-border-radius: 0.4em;
--o-border-radius: 0.4em;
-border-radius: 0.4em;
-border: 1px solid #05232b;
-line-height: 1.45em;
-font-size: 13px;
-margin-bottom: 2.1em;
-padding: .8em 1em;
-color: #93a1a1;
-overflow: auto;
+body {
+    font-size: 14px;
+    font-family: "Galdeano", "Hiragino Sans GB", "Microsoft YaHei", Trebuchet, "Trebuchet MS", Tahoma, "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
+    color: #000000;
+    background-image: url("/css/bg.png");
 }
-embed,object,iframe{display:block;margin:4px auto;}
-.gist{font-size: 12px;line-height:1.6;}
-.label-info {font-size: 11.25px;font-weight: 700;color: rgb(255, 255, 254);text-transform: uppercase;border-radius: 3px 3px 3px 3px;
-background-color: rgb(58, 135, 173);padding: 1px 3px 2px;}
-footer{text-align:center;}
-#intro{border: 0 none;position:absolute;right: 0;top: 0;}
-.button {  
-    display: inline-block;  
-    zoom: 1; /* zoom and *display = ie7 hack for display:inline-block */  
-    *display: inline;  
-    vertical-align: baseline;  
-    margin: 0 2px;  
-    outline: none;  
-    cursor: pointer;  
-    text-align: center;  
-    text-decoration: none;  
-    font: 14px/100% Arial, Helvetica, sans-serif;  
-    padding: .5em 2em .55em;  
-    text-shadow: 0 1px 1px rgba(0,0,0,.3);  
-    -webkit-border-radius: .5em;   
-    -moz-border-radius: .5em;  
-    border-radius: .5em;  
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);  
-    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);  
-    box-shadow: 0 1px 2px rgba(0,0,0,.2);  
-}  
-.button:hover {  
-    text-decoration: none;  
-}  
-.button:active {  
-    position: relative;  
-    top: 1px;  
-}  
-.bigrounded {  
-    -webkit-border-radius: 2em;  
-    -moz-border-radius: 2em;  
-    border-radius: 2em;  
-}  
-.rosy {  
-    color: #fae7e9;  
-    border: solid 1px #b73948;  
-    background: #da5867;  
-    background: -webkit-gradient(linear, left top, left bottom, from(#f16c7c), to(#bf404f));  
-    background: -moz-linear-gradient(top,  #f16c7c,  #bf404f);  
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#f16c7c', endColorstr='#bf404f');  
-}  
-.rosy:hover {  
-    background: #ba4b58;  
-    background: -webkit-gradient(linear, left top, left bottom, from(#cf5d6a), to(#a53845));  
-    background: -moz-linear-gradient(top,  #cf5d6a,  #a53845);  
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#cf5d6a', endColorstr='#a53845');  
-}  
-.rosy:active {  
-    color: #dca4ab;  
-    background: -webkit-gradient(linear, left top, left bottom, from(#bf404f), to(#f16c7c));  
-    background: -moz-linear-gradient(top,  #bf404f,  #f16c7c);  
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#bf404f', endColorstr='#f16c7c');  
-}  
-.middle
-{
-    float:left;
+* {
+    padding: 0;
+    margin: 0;
+    border: none;
+    outline: none;
 }
-/* red */  
-.red {  
-    color: #faddde;  
-    border: solid 1px #980c10;  
-    background: #d81b21;  
-    background: -webkit-gradient(linear, left top, left bottom, from(#ed1c24), to(#aa1317));  
-    background: -moz-linear-gradient(top,  #ed1c24,  #aa1317);  
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ed1c24', endColorstr='#aa1317');  
-}  
-.red:hover {  
-    background: #b61318;  
-    background: -webkit-gradient(linear, left top, left bottom, from(#c9151b), to(#a11115));  
-    background: -moz-linear-gradient(top,  #c9151b,  #a11115);  
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#c9151b', endColorstr='#a11115');  
-}  
-.red:active {  
-    color: #de898c;  
-    background: -webkit-gradient(linear, left top, left bottom, from(#aa1317), to(#ed1c24));  
-    background: -moz-linear-gradient(top,  #aa1317,  #ed1c24);  
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#aa1317', endColorstr='#ed1c24');  
-}  
+a {
+    color: #333333;
+    text-decoration: none;
+}
+a:hover {
+    color: #dd0000;
+    text-decoration: none;
+}
+hr {
+    margin: .7em 0;
+    border-top: 1px dashed #d0d0d0;
+    border-bottom: 1px dashed #f9f9f9;
+}
+p {
+    padding: .5em 0;
+}
+li {
+    padding: .2em 0;
+}
+ol, ul {
+    list-style-position: inside;
+}
+ol ul, ul ol, ul ul, ol ol {
+    margin-left: 1em;
+}
+blockquote {
+    display: block;
+    text-align: justify;
+    border-left: 4px solid #eeeeee;
+}
+blockquote {
+    margin: 1em 0em;
+    padding-left: 1.5em;
+}
+blockquote p {
+    margin: 0;
+    padding: .5em 0;
+}
+#container {
+    width: 600px;
+    margin: 2em auto;
+    display: block;
+    padding: 0 2em;
+}
+.content {
+    font-size: 16px;
+    line-height: 24px;
+}
+.content h1 {
+    padding: .5em 0;
+}
+.content img {
+    max-width: 600px;
+    display: block;
+    margin: 4px auto;
+    -webkit-box-shadow: #999 1px 1px 4px;
+    -moz-box-shadow: #999 1px 1px 4px;
+    box-shadow: #999 1px 1px 4px;
+}
+#tag_cloud {
+    margin-bottom: 1em;
+}
+#tag_cloud a:hover {
+    color: #333333 !important;
+    text-decoration: none;
+}
+.listing-item, .listing-seperator {
+    list-style-type: none;
+}
+.listing-item a {
+    padding: .2em 1em;
+}
+.listing-item time {
+    color: #999999;
+}
+.listing-seperator {
+    font-weight: bold;
+}
+.meta {
+    text-align: right;
+    font-size: 12px;
+}
+header {
+    padding: .5em 0;
+    border-bottom: 1px solid #cccccc;
+}
+nav {
+    position: absolute;
+    font-family: "Electrolize", sans-serif;
+    font-size: 1.1em;
+    text-transform: uppercase;
+    float: left;
+    margin-left: -12em;
+    width: 9em;
+    text-align: right;
+}
+nav a {
+    display: block;
+    padding: .7em 1em;
+    color: #000000;
+}
+nav a:hover {
+    background-color: #ff0000;
+    text-decoration: none;
+    color: #f9f9f9;
+    -webkit-transition: color .2s linear;
+}
+.post {
+    padding: .5em 0em;
+}
+h1 {
+    font-family: "Cuprum", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+    font-size: 1.6em;
+    color: #000;
+}
+h2 {
+    font-family: "Cuprum", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+    font-size: 1.4em;
+    color: #111;
+}
+h3 {
+    font-family: "Cuprum", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+    font-size: 1.2em;
+    color: #222;
+}
+h4 {
+    font-family: "Cuprum", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
+    font-size: 1em;
+    color: #333;
+}
+pre code {
+    font-family: Menlo, "Andale Mono", Consolas, "Courier New", Monaco, monospace;
+    font-size: 13px;
+    background: #002b36;
+    -webkit-border-radius: 0.4em;
+    -moz-border-radius: 0.4em;
+    -ms-border-radius: 0.4em;
+    -o-border-radius: 0.4em;
+    border-radius: 0.4em;
+    border: 1px solid #05232b;
+    line-height: 1.45em;
+    font-size: 13px;
+    margin-bottom: 2.1em;
+    padding: .8em 1em;
+    color: #93a1a1;
+    overflow: auto;
+}
+embed, object, iframe {
+    display: block;
+    margin: 4px auto;
+}
+.gist {
+    font-size: 12px;
+    line-height: 1.6;
+}
+.label-info {
+    font-size: 11.25px;
+    font-weight: 700;
+    color: rgb(255, 255, 254);
+    text-transform: uppercase;
+    border-radius: 3px 3px 3px 3px;
+    background-color: rgb(58, 135, 173);
+    padding: 1px 3px 2px;
+}
+footer {
+    text-align: center;
+}
+#intro {
+    border: 0 none;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.button {
+    display: inline-block;
+    zoom: 1;
+    /* zoom and *display = ie7 hack for display:inline-block */
+    
+    *display: inline;
+    vertical-align: baseline;
+    margin: 0 2px;
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    font: 14px/100% Arial, Helvetica, sans-serif;
+    padding: .5em 2em .55em;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
+    -webkit-border-radius: .5em;
+    -moz-border-radius: .5em;
+    border-radius: .5em;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .2);
+}
+.button:hover {
+    text-decoration: none;
+}
+.button:active {
+    position: relative;
+    top: 1px;
+}
+.bigrounded {
+    -webkit-border-radius: 2em;
+    -moz-border-radius: 2em;
+    border-radius: 2em;
+}
+.rosy {
+    color: #fae7e9;
+    border: solid 1px #b73948;
+    background: #da5867;
+    background: -webkit-gradient(linear, left top, left bottom, from(#f16c7c), to(#bf404f));
+    background: -moz-linear-gradient(top, #f16c7c, #bf404f);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#f16c7c', endColorstr='#bf404f');
+}
+.rosy:hover {
+    background: #ba4b58;
+    background: -webkit-gradient(linear, left top, left bottom, from(#cf5d6a), to(#a53845));
+    background: -moz-linear-gradient(top, #cf5d6a, #a53845);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#cf5d6a', endColorstr='#a53845');
+}
+.rosy:active {
+    color: #dca4ab;
+    background: -webkit-gradient(linear, left top, left bottom, from(#bf404f), to(#f16c7c));
+    background: -moz-linear-gradient(top, #bf404f, #f16c7c);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#bf404f', endColorstr='#f16c7c');
+}
+.middle {
+    float: left;
+}
+/* red */
 
+.red {
+    color: #faddde;
+    border: solid 1px #980c10;
+    background: #d81b21;
+    background: -webkit-gradient(linear, left top, left bottom, from(#ed1c24), to(#aa1317));
+    background: -moz-linear-gradient(top, #ed1c24, #aa1317);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ed1c24', endColorstr='#aa1317');
+}
+.red:hover {
+    background: #b61318;
+    background: -webkit-gradient(linear, left top, left bottom, from(#c9151b), to(#a11115));
+    background: -moz-linear-gradient(top, #c9151b, #a11115);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#c9151b', endColorstr='#a11115');
+}
+.red:active {
+    color: #de898c;
+    background: -webkit-gradient(linear, left top, left bottom, from(#aa1317), to(#ed1c24));
+    background: -moz-linear-gradient(top, #aa1317, #ed1c24);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#aa1317', endColorstr='#ed1c24');
+}
+
+
+
+#content {
+  max-width: 780px;
+  margin: 200px auto;
+}
+
+#text {
+  font-weight: bold;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#name h6 {
+  font-size: 120px;
+  font-family: Helvetica Neue;
+}
