--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <link href="http://feeds.feedburner.com/fofore/all" rel="alternate" title="fofore" type="application/atom+xml" />
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/highlight.css">
-    <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -27,6 +27,7 @@
                 <span><a title="categories" class="" href="{{ site.url }}/categories/">categories</a></span>
                 <span><a title="tags" 	  	class="" href="{{ site.url }}/tags/">tags</a></span>
                 <span><a title="vita" 	  	class="" href="{{ site.url }}/vita/">vita</a></span>
+                <span><a title="play"       class="" href="{{site.url}}/play/">play</a></span>
                 <span><a href="http://fofore.com/atom.xml"><img src="/images/rss.png" alt="Subscribe to the RSS feed" /></a></span>
             </nav>
             <article class="content">
@@ -41,4 +42,6 @@
 
 </body>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </html>
