--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>{{ page.title }} | FOFORE </title>
+    <title>{{ page.title }} | 代码与诗与人生 </title>
     <meta name="author" content="fofore" />
     <link href="http://feeds.feedburner.com/fofore/all" rel="alternate" title="fofore" type="application/atom+xml" />
     <link rel="stylesheet" href="/css/style.css">
@@ -35,7 +35,7 @@
             </article>
         </div>
     </div>
-    
+
 <footer>
     <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> on GitHub | Copyright 2005 - {{site.time | date:"%Y"}} by <a href="http://fofore.com">FOFORE</a> | <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S"}}</span></small></p>
 </footer>
