--- a/_layouts/none.html
+++ b/_layouts/none.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>{{ page.title }} | FOFORE </title>
+    <title>{{ page.title }} | 代码与诗与人生 </title>
     <meta name="author" content="fofore" />
     <link href="http://feeds.feedburner.com/fofore/all" rel="alternate" title="fofore" type="application/atom+xml" />
     <link rel="stylesheet" href="/css/style.css">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/animations.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link href="/css/hover.css" rel="stylesheet" media="all">
-    
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
