--- a/css/style.css
+++ b/css/style.css
@@ -354,8 +354,8 @@ ul.buttons li {
 
 html {
     font-size: 10px;
-    background:url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
-    background-size: cover;
+    /*background:url(http://i.imgur.com/b9r5sEL.jpg) bottom center;*/
+    /*background-size: cover;*/
 }
 body,html {
     margin: 0;
