--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
                 <span><a title="tags" 	  	class="" href="{{ site.url }}/tags/">tags</a></span>
                 <span><a title="vita" 	  	class="" href="{{ site.url }}/vita/">vita</a></span>
                 <span><a title="play"       class="" href="{{site.url}}/play/">play</a></span>
-                <span><a title="portfolio"  class="" href="{{site.url}}/portfolio/drum/">portfolio</a></span>
+                <span><a title="portfolio"  class="" href="{{site.url}}/portfolio/">portfolio</a></span>
                 <span><a href="http://fofore.com/atom.xml"><img src="/images/rss.png" alt="Subscribe to the RSS feed" /></a></span>
             </nav>
             <article class="content">
